--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ SUPABASE_URL="https://YOUR-PROJECT-REF.supabase.co"
 SUPABASE_SERVICE_ROLE_KEY="YOUR_SERVICE_ROLE_KEY"
 SUPABASE_ANON_KEY="YOUR_ANON_KEY"
 ADMIN_TOKEN="ADMIN_SECRET"
+OPENAI_API_KEY="OPENAI_API_KEY"
