Adding dv connection

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 SUPABASE_URL="https://YOUR-PROJECT-REF.supabase.co"
 SUPABASE_SERVICE_ROLE_KEY="YOUR_SERVICE_ROLE_KEY"
 SUPABASE_ANON_KEY="YOUR_ANON_KEY"
+DATABASE_URL=postgresql://postgres.[YOUR_DB_ID]:[YOUR-PASSWORD]@aws-1-us-east-2.pooler.supabase.com:6543/postgres
 ADMIN_TOKEN="ADMIN_SECRET"
 OPENAI_API_KEY="OPENAI_API_KEY"
